# dotfiles

./: .gitignore  .hyper.js  .tmux.conf.local  Brewfile-newmac  README.md  com.googlecode.iterm2.plist  tmux.conf  vimrc  zshrc
Karabiner/: karabiner.json
Karabiner/karabiner/automatic_backups/: karabiner_20220607.json  karabiner_20220627.json  karabiner_20221020.json  karabiner_20240115.json  karabiner_20240116.json
alacritty/: alacritty.toml  alacritty.yml  dracula.toml
doom/: config.el  custom.el  init.el  packages.el
fish/: config.fish
ghostty/: config
git/: .gitconfig
hammerspoon/: keyboard
hyper/: .hyper.js
iterm/: Default.json
iterm2/: Profiles.json  colors.itermcolors  com.googlecode.iterm2.plist
k9s/: config.yaml
k9s/skins/: catppuccin-mocha.yaml
karabiner/: karabiner.json
keyboard/: .config
keyboard/hammerspoon/: hyper-apps.lua  init.lua  windows.lua
keyboard/script/: setup
km/: Keyboard Maestro Macros.kmsync
moom/: Moom.plist
nvim/: init.lua  lazy-lock.json
nvim/lua/: vim-options.lua
nvim/lua/plugins/: autopairs.lua  bufferline.lua  (+7 more)
p10k/: .p10k.zsh
skhd/: skhdrc
starship/: starship.toml
tmux/: .tmux.conf  tmux.conf
vim/: .vimrc
vscode/: settings.json  snippets.code-snippets  vscode_settings.json
vscode/extensions/: .obsolete  argv.json  extensions.json
vscode/extensions/deepsourcecorp.deepsource-vscode-1.4.5/ui-testing/: README.md  setup.cfg
xbar/plugins/: 001-countdown.1h.py  001-countdown.1h.py.vars.json  toggl.10m.sh  toggl.10m.sh.vars.json
yabai/: yabairc
yazi/: keymap.toml
zsh/: .zshrc
(+305 files in other folders)
