[metadata]
name = ide-testing
version = 0.1.0
description = Automated testing for the DeepSource IDE plugin.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tushar-deepsource/ide-testing
author = Tushar Sadhwani
author_email = tushar@deepsource.io
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
install_requires =
    pyautogui==0.9.54
python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    ide-testing=ide_testing.cli:cli

[options.extras_require]
dev =
    black
    mypy

[options.package_data]
ide-testing =
	py.typed

[tool:pytest]
addopts = --cov --cov-report=term-missing
